--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
           document.write("<h4>¡¡Hola,"+ nombre+"!! <br> Gracias por interesarte en mi perfil</h4>"); 
       </script>--->
       <h4>Mi nombre es Marcela Maidana y construyo páginas web</h4>
-     <h2> Soy developer full-Stack Python (Agencia de Aprendizaje a lo largo de la vida, codo a codo Python 4.0).Actualmente estoy participando del proyecto Oracle ONE en Alura Latam y en la formación (para mejorar mi Front-end), realizando challenges.
-       Además de realizar el Trayecto: Diplomatura en Ciencia de Datos e Inteligencia Artificial de Argentina Programa 4.0 – UNSAM(Universidad Nacional de San Martín);
-       Estudiante de licenciatura en Pedagogia con área de concentración: Recursos humanos(Mediación y gestión de conflictos,Capacitación y desarrollo , Organización del capital humano) en la universidad UTEL en colaboración con Unicef (egresando 2023)<br>También soy:coach ontológico profesional y especialista en coaching educacional </h2>
+     <h2> Soy developer full-Stack Python (Agencia de Aprendizaje a lo largo de la vida, codo a codo Python 4.0).Developer Front End (Oracle Next Education en Alura Latam).Realizando el Trayecto: Diplomatura en Ciencia de Datos e Inteligencia Artificial de Argentina Programa 4.0–UNSAM(Universidad Nacional de San Martín);
+      Estudiante de licenciatura en Pedagogia con área de concentración: Recursos humanos (Mediación y gestión de conflictos,Capacitación y desarrollo , Organización del capital humano) en la universidad UTEL en colaboración con Unicef (egresando 2023)<br>También soy:coach ontológico profesional y especialista en coaching educacional, realizando el Máster en Counseling Integrativo, y Máster en Neuropedagogía </h2>
    </div>
 </body> 
    <footer>
     <div class="iconos1" >
-     <a  href="CVmayo 2023 Marcela Liliana Maidana.odt" class="boton icon-descarga" id="icon1" download="SLee Dw"><img src="img/cv-logo-tp-circle-word-symbol-trademark-text-transparent-png-347200.png"width="100" height="100" title="Descargar CV"></a>    
+     <a  href="CV-Marcela-Liliana-Maidana-julio2023.pdf" class="boton icon-descarga" id="icon1" download="SLee Dw"><img src="img/cv-logo-tp-circle-word-symbol-trademark-text-transparent-png-347200.png"width="100" height="100" title="Descargar CV"></a>    
      <a target="_Self" class="boton" id="icon2" href="https://www.linkedin.com/in/marcela-liliana-maidana-83370b92/"><img src="img/Linkedin-PNG-Pic-Background.png"width="200" height="50" title="Ir a mi Linkedin" ></a>
      </a>
     </div>
